# forgeone

./: .gitignore  AGENTS.md  Cargo.toml  README.md  libtmp46n2t3v5.rlib
.github/workflows/: ci.yml
apps/forgeone-desktop/: build.bat  index.html  package-lock.json  package.json  tsconfig.electron.json  tsconfig.json  vitest.config.ts
apps/forgeone-desktop/dist-electron/: main.js  preload.js
apps/forgeone-desktop/src/: App.tsx  index.css  main.ts  preload.ts
apps/forgeone-desktop/src/__tests__/: markdown-parser.test.ts
crates/forgeone-cli/: Cargo.toml
crates/forgeone-cli/src/: main.rs
crates/forgeone-context/: Cargo.toml
crates/forgeone-context/src/: lib.rs
crates/forgeone-eval/: Cargo.toml
crates/forgeone-eval/src/: lib.rs
crates/forgeone-model/: Cargo.toml
crates/forgeone-model-ollama/: Cargo.toml
crates/forgeone-model-ollama/src/: lib.rs
crates/forgeone-model-openai/: Cargo.toml
crates/forgeone-model-openai/src/: lib.rs
crates/forgeone-model/src/: lib.rs
crates/forgeone-policy/: Cargo.toml
crates/forgeone-policy/src/: lib.rs
crates/forgeone-runtime/: Cargo.toml
crates/forgeone-runtime/src/: lib.rs  mcp.rs
crates/forgeone-server/: Cargo.toml
crates/forgeone-server/src/: main.rs
crates/forgeone-session/: Cargo.toml
crates/forgeone-session/src/: lib.rs
crates/forgeone-tools/: Cargo.toml
crates/forgeone-tools/src/: extensions.rs  lib.rs  test_module.rs
crates/forgeone-trace/: Cargo.toml
crates/forgeone-trace/src/: lib.rs
crates/forgeone-tui/: Cargo.toml
crates/forgeone-tui/src/: commands.rs  lib.rs  main.rs  state.rs  theme.rs
crates/forgeone-tui/src/components/: conversation.rs  header.rs  input.rs  mod.rs  monitor.rs  status_bar.rs
docs/: architecture.md  cli-design.md  context-engine.md  desktop-design.md  mcp-integration.md  plugin-system.md  roadmap.md  runtime.md  tool-runtime.md  tui-design.md  vision.md
docs/stitch_design_extracted/stitch_forgeone_desktop_agent_framework/forgeone_chat/: code.html
docs/stitch_design_extracted/stitch_forgeone_desktop_agent_framework/forgeone_design_system/: DESIGN.md
docs/stitch_design_extracted/stitch_forgeone_desktop_agent_framework/forgeone_mcp/: code.html
docs/stitch_design_extracted/stitch_forgeone_desktop_agent_framework/forgeone_model/: code.html
docs/stitch_design_extracted/stitch_forgeone_desktop_agent_framework/forgeone_project/: code.html
specs/: context-spec.md  implementation-plan.md  model-spec.md  runtime-spec.md  tool-spec.md
