[package]
name = "forgeone-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
forgeone-runtime = { path = "../forgeone-runtime" }
forgeone-tui = { path = "../forgeone-tui" }
forgeone-tools = { path = "../forgeone-tools" }

[[bin]]
name = "forgeone"
path = "src/main.rs"

