[package]
name = "forgeone-eval"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
forgeone-runtime = { path = "../forgeone-runtime" }
forgeone-trace = { path = "../forgeone-trace" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
[lints]
workspace = true
