[package]
name = "forgeone-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
forgeone-context = { path = "../forgeone-context" }
forgeone-model = { path = "../forgeone-model" }
forgeone-model-openai = { path = "../forgeone-model-openai", optional = true }
forgeone-model-ollama = { path = "../forgeone-model-ollama", optional = true }
forgeone-policy = { path = "../forgeone-policy" }
forgeone-session = { path = "../forgeone-session" }
forgeone-trace = { path = "../forgeone-trace" }
forgeone-tools = { path = "../forgeone-tools" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["openai", "ollama"]
openai = ["forgeone-model-openai"]
ollama = ["forgeone-model-ollama"]

[lib]
path = "src/lib.rs"
