[package]
name = "forgeone-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
forgeone-runtime = { path = "../forgeone-runtime" }
forgeone-tools = { path = "../forgeone-tools" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "forgeone-server"
path = "src/main.rs"
