[package]
name = "forgeone-session"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
forgeone-trace = { path = "../forgeone-trace" }
forgeone-tools = { path = "../forgeone-tools" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
path = "src/lib.rs"
