[package]
name = "forgeone-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
walkdir = "2"
regex-lite = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8"

[lib]
path = "src/lib.rs"
