[package]
name = "forgeone-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
crossterm = "0.28"
forgeone-runtime = { path = "../forgeone-runtime" }
forgeone-model-ollama = { path = "../forgeone-model-ollama" }
forgeone-trace = { path = "../forgeone-trace" }
ratatui = "0.29"
unicode-width = "0.2"

[[bin]]
name = "forgeone-tui"
path = "src/main.rs"
